Implementation of handlers + memory storage + shortner
