# controllers/controllers.go
@@ -1,21 +1,36 @@
 package controllers
 
 import (
+	"fmt"
+
+	"github.com/asaskevich/govalidator"
+	"github.com/pcpratheesh/go-urlshortner/models"
+	"github.com/pcpratheesh/go-urlshortner/pkg/shortner"
+	"github.com/pcpratheesh/go-urlshortner/pkg/storage"
+	"github.com/sirupsen/logrus"
+
 	"github.com/gofiber/fiber/v2"
 )
 
 type controller struct {
 	baseURL string
+	store   storage.StorageInterface
 }
 
 type Config struct {
-	BaseURL string
+	BaseURL, Store string
 }
 
 // NewController - Initialize new controller
 func NewController(cfg Config) (*controller, error) {
+	// choose the store
+	store, err := storage.NewStorage(cfg.Store)
+	if err != nil {
+		return nil, err
+	}
+
 	return &controller{
-		cfg.BaseURL,
+		cfg.BaseURL, store,
 	}, nil
 }
 
@@ -49,15 +64,58 @@ func (c *controller) Health(ctx *fiber.Ctx) error {
 // EncodeURL godoc
 // @Summary Endpoint encode url
 // @Description This endpoint is for prepare teh encoded url
-// @Accept */*
 // @Produce json
-// @Success 200 {object} models.URLShortnerResponse
+// @Param RequestBody body models.URLShortenRequest true "The body to request an encode"
+// @Success 200 {object} models.URLShortenResponse
 // @Failure 400 {object} models.HTTPError400
 // @Failure 404 {object} models.HTTPError404
 // @Failure 500 {object} models.HTTPError500
 // @Router /encode [POST]
 func (c *controller) EncodeURL(ctx *fiber.Ctx) error {
-	return ctx.Status(fiber.StatusNotImplemented).SendString("endpoint not implemented")
+	logrus.Info("[ENDPOINT] EncodeURL")
+
+	// check for the incoming request body
+	body := new(models.URLShortenRequest)
+	if err := ctx.BodyParser(&body); err != nil {
+		logrus.Errorf("cannot parse request, %v", err)
+		return ctx.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"error": "cannot parse request",
+		})
+	}
+
+	// check the url is valid
+	if !govalidator.IsURL(body.URL) {
+		logrus.Errorf("Invalid URL %v", body.URL)
+		return ctx.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"error": "Invalid URL",
+		})
+	}
+
+	// check the url is already generated one,
+	// then return the existing one without generate new one
+	if url, ok := c.store.CheckURLExists(body.URL); ok {
+		return ctx.JSON(models.URLShortenResponse{
+			URL:  fmt.Sprintf("%s/short/%s", c.baseURL, url),
+			Code: url,
+		})
+	}
+
+	// Generate the shorten url
+	generatedURL := shortner.GenerateShortLink(body.URL)
+
+	// store the data
+	err := c.store.SaveURL(generatedURL, body.URL)
+	if err != nil {
+		logrus.Errorf("unable to store the generated url %v", err)
+		return ctx.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+			"error": "unable to store the generated url",
+		})
+	}
+
+	return ctx.JSON(models.URLShortenResponse{
+		URL:  fmt.Sprintf("%s/short/%s", c.baseURL, generatedURL),
+		Code: generatedURL,
+	})
 }
 
 // DecodeURL godoc
@@ -72,5 +130,15 @@ func (c *controller) EncodeURL(ctx *fiber.Ctx) error {
 // @Failure 500 {object} models.HTTPError500
 // @Router /short/{shorturl} [GET]
 func (c *controller) DecodeURL(ctx *fiber.Ctx) error {
-	return ctx.Status(fiber.StatusNotImplemented).SendString("endpoint not implemented")
+	shortURL := ctx.Params("url")
+	logrus.Info("[ENDPOINT] DecodeURL", logrus.WithField("url", shortURL))
+
+	// check the url exists
+	originalURl := c.store.RetrieveURL(shortURL)
+	if originalURl == "" {
+		logrus.Errorf("invalid url %v", shortURL)
+		return ctx.Status(fiber.StatusNotFound).SendString("invalid url")
+	}
+
+	return ctx.Redirect(originalURl)
 }
